# pretalx-plugin-cookiecutter

./: README.rst  cookiecutter.json
.github/workflows/: run.yml
hooks/: post_gen_project.py
{{cookiecutter.__repo_name}}/: .gitignore  MANIFEST.in  README.rst  justfile  pyproject.toml
{{cookiecutter.__repo_name}}/.github/: dependabot.yml
{{cookiecutter.__repo_name}}/.github/workflows/: coverage.yml  dependabot-auto-merge.yml  style.yml  tests.yml
{{cookiecutter.__repo_name}}/tests/: conftest.py  test_main.py
{{cookiecutter.__repo_name}}/{{cookiecutter.module_name}}/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
{{cookiecutter.__repo_name}}/{{cookiecutter.module_name}}/templates/{{cookiecutter.module_name}}/: settings.html
{{cookiecutter.repo_name}}/: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/workflows/: style.yml
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/locale/de/LC_MESSAGES/: django.po
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/locale/de_DE/LC_MESSAGES/: django.po
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/locale/de_DE/de/LC_MESSAGES/: django.po
