[project]
name = "{{cookiecutter.__repo_name}}"
dynamic = ["version"]
description = "{{cookiecutter.short_description}}"
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["pretalx"]
authors = [
  {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
maintainers = [
  {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]

dependencies = []

[project.urls]
homepage = "{{cookiecutter.repo_url}}"
repository = "{{cookiecutter.repo_url}}.git"

[project.entry-points."pretalx.plugin"]
{{cookiecutter.module_name}} = "{{cookiecutter.module_name}}:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.module_name}}.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]
