[project]
name = "{{cookiecutter.repo_name}}"
dynamic = ["version"]
description = "{{cookiecutter.short_description}}"
readme = "README.rst"
license = {text = "{{cookiecutter.license}}"}
keywords = ["pretalx"]
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
maintainers = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]

dependencies = [
]

[project.entry-points."pretalx.plugin"]
{{cookiecutter.module_name}} = "{{cookiecutter.module_name}}:PretalxPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretalx_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretalx-plugin-build",
]

[project.urls]
homepage = "{{cookiecutter.repo_url}}"
repository = "{{cookiecutter.repo_url}}"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.module_name}}.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]
namespaces = false
